[gd_scene load_steps=16 format=2]

[ext_resource path="res://NarutoHokage.gd" type="Script" id=1]
[ext_resource path="res://assets/naruto hokage/5.png" type="Texture" id=2]
[ext_resource path="res://assets/naruto hokage/1.png" type="Texture" id=3]
[ext_resource path="res://assets/naruto hokage/4.png" type="Texture" id=4]
[ext_resource path="res://assets/naruto hokage/0.png" type="Texture" id=5]
[ext_resource path="res://assets/naruto hokage/2.png" type="Texture" id=6]
[ext_resource path="res://assets/naruto hokage/3.png" type="Texture" id=7]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ) ],
"loop": true,
"name": "stance",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 7.0
height = 28.0

[sub_resource type="CircleShape2D" id=3]
radius = 347.973

[sub_resource type="CircleShape2D" id=4]
radius = 146.014

[sub_resource type="CircleShape2D" id=6]
radius = 12.8428

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 14, 42.5 )

[node name="NarutoHokage" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 433, 324.5 )
scale = Vector2( 1.0625, 1.08333 )
frames = SubResource( 1 )
animation = "stance"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 435, 323 )
shape = SubResource( 5 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 436, 317 )

[node name="runtoplayer" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="runtoplayer"]
position = Vector2( 445, 352 )
shape = SubResource( 3 )

[node name="walk" type="Area2D" parent="."]
visible = false
position = Vector2( 30, 50 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="walk"]
position = Vector2( 395, 267 )
shape = SubResource( 4 )

[node name="Health" type="ColorRect" parent="."]
margin_left = 427.0
margin_top = 271.0
margin_right = 446.0
margin_bottom = 272.0
color = Color( 0.262745, 0.941176, 0.0941176, 1 )

[node name="Red" type="ColorRect" parent="Health"]
margin_left = 1.0
margin_right = 19.0
margin_bottom = 1.0
color = Color( 0.41954, 0.452638, 0.457031, 1 )

[node name="Bar" type="ColorRect" parent="Health"]
margin_left = 1.0
margin_right = 19.0
margin_bottom = 1.0
color = Color( 0.262745, 0.941176, 0.0941176, 1 )

[node name="Hitbox" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 253, 49 )
collision_mask = 16

[node name="CollisionShape2D" parent="Hitbox" index="0"]
modulate = Color( 0.705882, 0.0666667, 0.0666667, 1 )
position = Vector2( 185, 265 )
rotation = -1.56918
scale = Vector2( 0.622918, 3.02231 )
shape = SubResource( 6 )
one_way_collision_margin = 2.0

[node name="Hurtbox" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 398, 265 )
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 39, 50.5 )
shape = SubResource( 7 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="runtoplayer" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="runtoplayer" to="." method="_on_attack_body_exited"]
[connection signal="body_entered" from="walk" to="." method="_on_jump_body_entered"]
[connection signal="body_exited" from="walk" to="." method="_on_jump_body_exited"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
